dataset1235/2025-2/1153765216/users/1581346053/executions/2052804200_359761547.log
== SUBMISSION (2025-09-02 19:22:01)
-- CODE: 
int(input("Idade"))
print(idade)
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:22:00)
-- CODE: 
int(input("Idade"))
print(idade)
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:23:44)
-- CODE: 
int(input("Idade"))
print(idade)
if idade >= 2:
   print("paga")
else:
   print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(idade)
          ^^^^^
NameError: name 'idade' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:22:13)
-- CODE: 
int(input("Idade"))
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if idade >= 2:
       ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if idade >= 2:
       ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if idade >= 2:
       ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if idade >= 2:
       ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if idade >= 2:
       ^^^^^
NameError: name 'idade' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if idade >= 2:
       ^^^^^
NameError: name 'idade' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:24:17)
-- CODE: 
idade = int(input("Idade"))
print(idade)
if idade >= 2:
   print("paga")
else:
   print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:21:34)
-- CODE: 
int(input("Idade"))
print(idade)
if idade >= 2:
    print("paga")
else
    print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:21:45)
-- CODE: 
int(input("Idade"))
print(idade)
if idade >= 2:
  print("paga")
else
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    else
        ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
